Squash merge add/hold-brick to additions