@@ -3,6 +3,7 @@ package com.tetris.logic;
 import com.tetris.*;
 import com.tetris.logic.bricks.Brick;
 import com.tetris.logic.bricks.BrickGenerator;
+import com.tetris.logic.bricks.NullBrick;
 import com.tetris.logic.bricks.RandomBrickGenerator;
 import com.tetris.util.MatrixOperations;
 
@@ -14,6 +15,7 @@ public class SimpleBoard implements Board {
     private final int height;
     private final BrickGenerator brickGenerator;
     private final BrickRotator brickRotator;
+    private Brick holdBrick = NullBrick.getInstance();
     private int[][] currentGameMatrix;
     private Point currentOffset;
     private final Score score;
@@ -86,7 +88,23 @@ public class SimpleBoard implements Board {
     @Override
     public boolean createNewBrick() {
         Brick currentBrick = brickGenerator.getBrick();
-        brickRotator.setBrick(currentBrick);
+        return changeBrick(currentBrick);
+    }
+
+    @Override
+    public void holdBrick() {
+        Brick temp;
+        if (holdBrick == NullBrick.getInstance()) {
+            temp = brickGenerator.getBrick();
+        } else {
+            temp = holdBrick;
+        }
+        holdBrick = brickRotator.getBrick();
+        changeBrick(temp);
+    }
+
+    private boolean changeBrick(Brick brick) {
+        brickRotator.setBrick(brick);
         currentOffset = new Point(width/2-1,0);
         return MatrixOperations.intersect(currentGameMatrix, brickRotator.getCurrentShape(), (int) currentOffset.getX(), (int) currentOffset.getY());
     }
@@ -98,7 +116,7 @@ public class SimpleBoard implements Board {
 
     @Override
     public ViewData getViewData() {
-        return new ViewData(brickRotator.getCurrentShape(), (int) currentOffset.getX(), (int) currentOffset.getY(), brickGenerator.getNextBrick().getShapeMatrix().get(0));
+        return new ViewData(brickRotator.getCurrentShape(), (int) currentOffset.getX(), (int) currentOffset.getY(), brickGenerator.getNextBrick().getShapeMatrix().getFirst(), holdBrick.getShapeMatrix().getFirst());
     }
 
     @Override
